# RAG-Study-Buddy

./: README.md
backend/: .env  .gitignore  Makefile  pyproject.toml
backend/.github/workflows/: ci.yml
backend/app/: main.py
backend/app/api/: router.py  schemas.py
backend/app/api/routes/: chat.py  documents.py  export.py  flashcards.py  indexing.py  quiz.py  workspaces.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: init_db.py  migrations_node.md  models.py  models_quiz.py  session.py
backend/app/eval/: eval_runner.py  sample_eval_set.json
backend/app/ingestion/: chunking.py  indexer.py  pdf_extractor.py
backend/app/retrieval/: retriever.py
backend/app/services/: chat_service.py  documents_service.py  embeddings_client.py  export_service.py  flashcards_service.py  indexing_service.py  llm_client.py  prompting.py  quiz_service.py  vector_store.py  workspaces_service.py
backend/app/tests/: test_chat.py  test_chunking.py  test_db_init.py  test_db_models.py  test_embeddings_client.py  test_eval_runner.py  test_export_csv.py  test_flashcards.py  test_health.py  test_indexer.py  test_indexing_route.py  test_llm_client.py  test_pdf_extractor.py  test_prompting.py  test_quiz.py  test_retriever.py  test_upload.py  test_vector_store.py  test_workspaces.py
