[tool.poetry]
name = "rag-study-buddy"
version = "0.1.0"
description = "RAG-powered study buddy backend"
authors = ["Your Name <rob>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.47"
aiosqlite = "^0.22.1"
python-multipart = "^0.0.22"
pypdf = "^6.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

